namespace java com.igool.rpc.db.model.thrift
struct BusinessTypeDetail {
			1:i32 businessDetailId,
			2:i32 businessTypeId,
			3:string detailName,
			4:i32 imageCount,
			5:i32 imageOrder,
			6:string detailCoding,
			7:i32 isNecessity,
			8:i32 isSm,
			9:string remark,
			10:i32 status,
            11:string isQs
	}