namespace java com.igool.rpc.db.model.thrift
struct ImageDetail {
			1:string src,
			2:string name,
			3:string imageCode,
			4:string primarySrc,
	}