namespace java com.igool.rpc.db.model.thrift
struct VehicleFlow {
        1:string dabh,
        2:string hpzl,
        3:string hphm,
        4:string ywlx,
        5:string clsbdh,
        6:string sqrq,
        7:string xh,
        8:string lszt,
        9:string lsh
	}